--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="info p-40 bg-white">
             <div class="with-line d-flex align-c gap-10 mb-30 c-mobile">
                 <span class="line d-block line-size bg-blue"></span>
-                <p class="fs-25 bold upper blue-c letter-s1">about us</p>
+                <p class="fs-25 bold upper blue-c letter-s1 text-c-mobile">about us</p>
                 <span class="line d-block line-size d-none show-mobile bg-blue"></span>
             </div>
             <h2 class="title-c bolder fs-50 caitalize mb-40 text-c-mobile">
@@ -58,7 +58,7 @@
         <div class="info p-40 bg-white">
             <div class="with-line d-flex align-c gap-10 mb-30 c-mobile">
                 <span class="line d-block line-size bg-yellow"></span>
-                <p class="fs-25 bold upper yellow-c letter-s1">OUR FEATURES</p>
+                <p class="fs-25 bold upper yellow-c letter-s1 text-c-mobile">OUR FEATURES</p>
                 <span class="line d-block line-size d-none show-mobile bg-yellow"></span>
             </div>
             <h2 class="title-c bolder fs-50 caitalize mb-40 text-c-mobile">
@@ -80,7 +80,7 @@
         <div class="info p-40 bg-white">
             <div class="with-line d-flex align-c gap-10 mb-30 c-mobile">
                 <span class="line d-block line-size bg-pink"></span>
-                <p class="fs-25 bold upper pink-c letter-s1">DIGITAL STUDIO</p>
+                <p class="fs-25 bold upper pink-c letter-s1 text-c-mobile">DIGITAL STUDIO</p>
                 <span class="line d-block line-size d-none show-mobile bg-pink"></span>
             </div>
             <h2 class="title-c bolder fs-50 caitalize mb-40 text-c-mobile">
